--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/Style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
-    
+<body class="open-sans">
+    <header>
+        <section id="head-container">
+            <div class="hh">
+                <div class="head-bac">
+                <h1>All Thinks Are Possible if you believe</h1>
+            </div>
+            <div class="head-bb">
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            </div>
+            <div class="btn">
+                <button>Contact Us</button>
+            </div>
+            </div>
+        </section>
+    </header>
 </body>
 </html>
