--- a/index.html
+++ b/index.html
@@ -24,6 +24,51 @@
             </div>
             </div>
         </section>
+        <section id="midium-container">
+            <div class="container">
+                <div class="img">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="p">
+                <h1>My failures of previous year</h1>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul class="tick-list">
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular simply.</li>
+                </ul>
+            </div>
+            </div>
+        </section>
     </header>
+    <main>
+        <section id="main-container">
+            <h1>My Plans</h1>
+            <div class="mid-content">
+                <div class="a">
+                    <img src="images/icons/web.png" alt="">
+                    <h3>Web Development</h3>
+                    <p>I want to start</p>
+                </div>
+                <div class="a">
+                    <img src="images/icons/js.png" alt="">
+                    <h3>Javascript</h3>
+                    <p>I want to learn</p>
+                </div>
+                <div class="a">
+                    <img src="images/icons/smoke.png" alt="">
+                    <h3>Smoking Habit</h3>
+                    <p>I want to end</p>
+                </div>
+                <div class="a">
+                    <img src="images/icons/ecom.png" alt="">
+                    <h3>ecommerce</h3>
+                    <p>I want to develop</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
