--- a/index.html
+++ b/index.html
@@ -69,6 +69,35 @@
                 </div>
             </div>
         </section>
+
+        <section id="ll">
+            <div class="kk">
+                <h1>Awlays keep a positive mindset</h1>
+                <button>Call Now</button>
+            </div>
+        </section>
     </main>
+    <footer>
+        <section id="n">
+            <div class="head">
+                <div class="g">
+                    <h1>Future</h1>
+                    <p class="r">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                    <p class="r1">Email : info@gmail.com</p>
+                    <p class="r2">Phone : 01500 00 00 00</p>
+                    <ul>
+                        <li><img src="images/icons/fb.png" alt=""></li>
+                        <li><img src="images/icons/twitter.png" alt=""></li>
+                        <li><img src="images/icons/youtube.png" alt=""></li>
+                    </ul>
+                </div>
+                <div class="h">
+                    <h3>Subscribe</h3>
+                    <p>Enter your email</p>
+                    <button class="s">Subscribe</button>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
